--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "eslint": "^9",
-    "eslint-config-next": "16.1.1",
+    "autoprefixer": "^10",
+    "postcss": "^8",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
